--- a/Resources/Prototypes/_CP14/Reagents/blood.yml
+++ b/Resources/Prototypes/_CP14/Reagents/blood.yml
@@ -1,4 +1,34 @@
 - type: reagent
+  id: CP14BloodAnimal
+  group: CP14Precurser
+  name: cp14-reagent-name-blood-animal
+  desc: cp14-reagent-desc-blood-animal
+  flavor: CP14Metallic
+  color: "#802020"
+  recognizable: true
+  physicalDesc: cp14-reagent-physical-desc-ferrous
+  slippery: false
+  footstepSound:
+    collection: FootstepBlood
+    params:
+      volume: 6
+
+- type: reagent
+  id: CP14BloodVampire
+  group: CP14Precurser
+  name: cp14-reagent-name-blood-vampire
+  desc: cp14-reagent-desc-blood-vampire
+  flavor: CP14Metallic
+  color: "#800000"
+  recognizable: true
+  physicalDesc: cp14-reagent-physical-desc-ferrous
+  slippery: false
+  footstepSound:
+    collection: FootstepBlood
+    params:
+      volume: 6
+
+- type: reagent
   id: CP14Blood
   group: CP14Precurser
   name: cp14-reagent-name-blood
