--- a/Resources/Prototypes/_CP14/GameRules/roundstart.yml
+++ b/Resources/Prototypes/_CP14/GameRules/roundstart.yml
@@ -7,6 +7,15 @@
     cP14Allowed: true
 
 - type: entity
+  parent: CP14BaseGameRule
+  id: CP14SubGamemodesRule
+  components:
+  - type: SubGamemodes
+    rules:
+    - id: CP14Vampire
+      prob: 0.5
+
+- type: entity
   id: CP14RoundObjectivesRule
   parent: CP14BaseGameRule
   components:
