--- a/Resources/Prototypes/_CP14/Loadouts/Misc/undead_startinggear.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Misc/undead_startinggear.yml
@@ -35,6 +35,7 @@
     head: CP14ClothingHeadMetalHeadband
   inhand:
     - CP14TorchIgnited
+    - CP14BaseShield
 
 - type: startingGear
   id: CP14MobSkeletonDodger
@@ -66,6 +67,8 @@
     shoes: CP14LongLeatherBoots
     cloak: CP14ClothingCloakWhite
     ring2: CP14ClothingRingSkeletonWizard
+  inhand:
+    - CP14ManaOperationGlove
 
 - type: startingGear
   id: CP14MobSkeletonCloset
