vampire blood nutrition

--- a/Resources/Maps/_CP14/dev_map.yml
+++ b/Resources/Maps/_CP14/dev_map.yml
@@ -78,6 +78,7 @@ entities:
       parent: 1
     - type: BecomesStation
       id: Dev
+    - type: Roof
     - type: MapGrid
       chunks:
         0,0:
