--- a/Resources/Prototypes/_CP14/Reagents/blood.yml
+++ b/Resources/Prototypes/_CP14/Reagents/blood.yml
@@ -1,4 +1,37 @@
 - type: reagent
+  id: CP14Blood
+  group: CP14Precurser
+  name: cp14-reagent-name-blood
+  desc: cp14-reagent-desc-blood
+  flavor: CP14Metallic
+  color: "#800000"
+  recognizable: true
+  physicalDesc: cp14-reagent-physical-desc-ferrous
+  slippery: false
+  footstepSound:
+    collection: FootstepBlood
+    params:
+      volume: 6
+  metabolisms:
+    Food:
+      effects:
+      - !type:SatiateHunger
+        defaultNutritionFactor: 1
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+    Medicine:
+      effects:
+      - !type:HealthChange
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+        damage:
+          groups:
+            Brute: -5
+            Burn: -5
+
+- type: reagent
   id: CP14BloodAnimal
   group: CP14Precurser
   name: cp14-reagent-name-blood-animal
@@ -12,27 +45,20 @@
     collection: FootstepBlood
     params:
       volume: 6
+  metabolisms:
+    Food:
+      effects:
+      - !type:SatiateHunger
+        defaultNutritionFactor: 1
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
 
 - type: reagent
   id: CP14BloodVampire
   group: CP14Precurser
   name: cp14-reagent-name-blood-vampire
   desc: cp14-reagent-desc-blood-vampire
-  flavor: CP14Metallic
-  color: "#800000"
-  recognizable: true
-  physicalDesc: cp14-reagent-physical-desc-ferrous
-  slippery: false
-  footstepSound:
-    collection: FootstepBlood
-    params:
-      volume: 6
-
-- type: reagent
-  id: CP14Blood
-  group: CP14Precurser
-  name: cp14-reagent-name-blood
-  desc: cp14-reagent-desc-blood
   flavor: CP14Metallic
   color: "#800000"
   recognizable: true
@@ -57,6 +83,38 @@
     collection: FootstepBlood
     params:
       volume: 6
+  metabolisms:
+    Food:
+      effects:
+      - !type:SatiateHunger
+        defaultNutritionFactor: 1
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+    Medicine:
+      effects:
+      - !type:HealthChange
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+        damage:
+          groups:
+            Brute: -3
+            Burn: -3
+      - !type:FlammableReaction
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+        multiplier: 1.5
+      - !type:AdjustTemperature
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+        amount: 2000
+      - !type:Ignite
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
 
 - type: reagent
   id: CP14BloodElf
@@ -72,6 +130,30 @@
     collection: FootstepBlood
     params:
       volume: 6
+  metabolisms:
+    Food:
+      effects:
+      - !type:SatiateHunger
+        defaultNutritionFactor: 1
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+    Medicine:
+      effects:
+      - !type:CP14ManaChange
+        manaDelta: 10
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+        safe: true
+      - !type:HealthChange
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+        damage:
+          groups:
+            Brute: -3
+            Burn: -3
 
 - type: reagent
   id: CP14BloodGoblin
@@ -87,3 +169,28 @@
     collection: FootstepBlood
     params:
       volume: 6
+  metabolisms:
+    Food:
+      effects:
+      - !type:SatiateHunger
+        defaultNutritionFactor: 1
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+    Medicine:
+      effects:
+      - !type:HealthChange
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+        damage:
+          groups:
+            Brute: -3
+            Burn: -3
+      - !type:MovespeedModifier
+        conditions:
+        - !type:OrganType
+          type: CP14Vampire
+        walkSpeedModifier: 1.35
+        sprintSpeedModifier: 1.35
+        statusLifetime: 1.5
