base bite actions

--- a/Resources/Prototypes/_CP14/Roles/Antags/vampire.yml
+++ b/Resources/Prototypes/_CP14/Roles/Antags/vampire.yml
@@ -2,7 +2,7 @@
   id: CP14Vampire
   name: cp14-roles-antag-vampire-name
   antagonist: true
-  setPreference: false
+  setPreference: true
   objective: cp14-roles-antag-vampire-objective
   requirements:
   - !type:OverallPlaytimeRequirement
