--- a/Resources/Prototypes/_CP14/GameRules/subgamemodes.yml
+++ b/Resources/Prototypes/_CP14/GameRules/subgamemodes.yml
@@ -22,7 +22,7 @@
       - type: CP14Vampire
       - type: CP14AutoLearnAction
         actions:
-        - CP14ActionSpellPlantGrowth
+        - CP14ActionVampireBite
       briefing:
         text: cp14-roles-antag-vampire-briefing
         color: "#630f24"
