--- a/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
@@ -77,6 +77,8 @@
       - id: CP14Rope
       - id: CP14Nail20
       - id: CP14EnergyCrystalSmall
+      - id: CP14d20Dice
+      - id: CP14d6Dice
       - id: CP14CopperCoin5
         weight: 0.5
       - id: CP14BaseSharpeningStone
