--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/guildmaster.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/guildmaster.yml
@@ -9,7 +9,7 @@
 - type: loadout
   id: CP14ClothingHeadGildmaster
   equipment:
-    cloak: CP14ClothingHeadGildmaster
+    head: CP14ClothingHeadGildmaster
      
 # Cloak
 
