--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/General/sell_special.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/General/sell_special.yml
@@ -1,7 +1,7 @@
 - type: storePositionSell
   id: CP14FoodPieMeat
   special: true
-  price: 30
+  price: 60
   service: !type:CP14SellPrototypeService
     proto: CP14FoodPieMeat
     count: 1
@@ -9,7 +9,15 @@
 - type: storePositionSell
   id: CP14FoodPiePumpkin
   special: true
-  price: 30
+  price: 60
   service: !type:CP14SellPrototypeService
     proto: CP14FoodPiePumpkin
     count: 1
+
+- type: storePositionSell
+  id: CP14FoodBreadBun
+  special: true
+  price: 20
+  service: !type:CP14SellPrototypeService
+    proto: CP14FoodBreadBun
+    count: 3
