--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Vampire/T1_Hypnosis.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Vampire/T1_Hypnosis.yml
@@ -43,7 +43,7 @@
     event: !type:CP14DelayedEntityTargetActionEvent
       cooldown: 30
       castDelay: 1.5
-      breakOnMove: false
+      breakOnMove: true
  
 - type: entity
   id: CP14RuneVampireHypnosis
