--- a/Resources/Prototypes/_CP14/Recipes/Workbench/Anvil/modular_cuisses.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/Anvil/modular_cuisses.yml
@@ -44,7 +44,57 @@
   requirements:
   - !type:StackResource
     stack: CP14MithrilBar
-    count: 5
+    count: 2
   - !type:KnowledgeRequired
     knowledge: MetallForging
   result: CP14ModularCuissesMithrilPlate
+
+# Chainmail
+
+- type: CP14Recipe
+  id: CP14ModularCuissesIronChainmail
+  tag: CP14RecipeAnvil
+  craftTime: 6
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
+  result: CP14ModularCuissesIronChainmail
+
+- type: CP14Recipe
+  id: CP14ModularCuissesGoldChainmail
+  tag: CP14RecipeAnvil
+  craftTime: 6
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
+  result: CP14ModularCuissesGoldChainmail
+
+- type: CP14Recipe
+  id: CP14ModularCuissesCopperChainmail
+  tag: CP14RecipeAnvil
+  craftTime: 6
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
+  result: CP14ModularCuissesCopperChainmail
+
+- type: CP14Recipe
+  id: CP14ModularCuissesMithrilChainmail
+  tag: CP14RecipeAnvil
+  craftTime: 6
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
+  result: CP14ModularCuissesMithrilChainmail
