--- a/Resources/Prototypes/_CP14/GameRules/subgamemodes.yml
+++ b/Resources/Prototypes/_CP14/GameRules/subgamemodes.yml
@@ -24,6 +24,7 @@
         actions:
         - CP14ActionVampireBite
         - CP14ActionSpellVampireHypnosis
+        - CP14ActionSpellVampireBloodStep
       - type: Hunger
         baseDecayRate: 0.07
         starvationDamage:
