--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/produce.yml
@@ -197,7 +197,8 @@
     size: Tiny
   - type: FlavorProfile
     flavors:
-      - CP14Water #TODO
+      - CP14Water
+      - CP14cucumber
   - type: Sprite
     sprite: _CP14/Objects/Flora/Farm/cucumber.rsi
     layers:
